# minimal-reproducible-firebase-pub-sub-bugs

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  firebase.json  firestore.rules
firebase/: DockerfileLinux  DockerfileMac  run.sh
functions/python/: .env.demo-local-development  .gitignore  Makefile  main.py  pyproject.toml  pytest.ini  requirements.txt
functions/python/app/: logging.py
functions/python/app/handlers/: products_sync.py
functions/python/app/models/: product.py
functions/python/app/services/: firebase_admin.py  firestore.py  pubsub.py
functions/python/app/services/product/: __init__.py  firestore.py  transformers.py
functions/python/app/tests/integration/fixtures/: db.py  init_app.py  product.py  wait.py
functions/python/app/tests/integration/handlers/: conftest.py  test_pubsub_emulator.py
