[tool.poetry]
name = "functions"
version = "0.1.0"
description = "Python Cloud Functions Gen2"
authors = ["Dummy Author"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
functions-framework = "^3.5.0"
pydantic = "^2.7.1"
google-cloud-firestore = "^2.16.0"
google-cloud-logging = "^3.10.0"
firebase-admin = "^6.5.0"
firebase-functions = "^0.4.2"
google-events = "0.12.0"
gunicorn = "^23.0.0"
protobuf = "^4.21.5"
nltk = "^3.9.1"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
grpcio = "^1.66.1"
cryptography = "^44.0.1"
aiohttp = "3.10.11"
psycopg2-binary = "^2.9.10"
google-cloud-pubsub = "^2.28.0"
google-cloud-storage = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true


[tools.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test",
    "unit: mark a test as a unit test",
]
[tool.black]
line-length = 88

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "proto"
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"